--- a/examples/basic-timeline/index.html
+++ b/examples/basic-timeline/index.html
@@ -68,7 +68,7 @@
         <div class="info-panel">
             <h3>Basic Usage:</h3>
             <div class="code-block">
-                import { PowerTimeline } from '@react-powertimeline';
+                import { PowerTimeline } from 'react-powertimeline';
 
                 const lanes = [
                 { id: 'events', height: 60, label: 'System Events' },
